Add support for testing with Rails 8.0
- Add Ruby 3.3.0 + Rails 8.0 to the test matrix

- Create dedicated workflow file for local testing with Rails 8.0

--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -19,6 +19,9 @@ jobs:
         rails-version:
           - '7.0'
           - '7.1'
+        include:
+          - ruby-version: '3.3.0'
+            rails-version: '8.0'
           
     name: Ruby ${{ matrix.ruby-version }} | Rails ${{ matrix.rails-version }}
     
