--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,88 @@
-name: Ruby
+name: Clavis CI
 
 on:
   push:
     branches:
       - master
-
+      - main
   pull_request:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby }}
     strategy:
+      fail-fast: false
       matrix:
-        ruby:
+        ruby-version:
+          - '3.3.0'
           - '3.4.1'
-
+        rails-version:
+          - '7.0'
+          - '7.1'
+        include:
+          - ruby-version: '3.3.0'
+            rails-version: '8.0'
+          
+    name: Ruby ${{ matrix.ruby-version }} | Rails ${{ matrix.rails-version }}
+    
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
-      - name: Run the default task
-        run: bundle exec rake
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: false
+          
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential pkg-config libsqlite3-dev
+          
+      - name: Setup bundle cache
+        uses: actions/cache@v3
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-ruby-${{ matrix.ruby-version }}-rails-${{ matrix.rails-version }}-gems-${{ hashFiles('**/Gemfile.lock') }}-v1
+          restore-keys: |
+            ${{ runner.os }}-ruby-${{ matrix.ruby-version }}-rails-${{ matrix.rails-version }}-gems-
+            
+      - name: Install dependencies
+        run: |
+          bundle config set --local path vendor/bundle
+          bundle config set --local with 'test'
+          bundle add activesupport --version "~> ${{ matrix.rails-version }}.0"
+          bundle install --jobs 4 --retry 3
+          
+      - name: Run tests
+        run: bundle exec rspec
+  
+  lint:
+    runs-on: ubuntu-latest
+    name: Lint
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.4.1'
+          bundler-cache: false
+          
+      - name: Install dependencies
+        run: |
+          bundle config set --local path vendor/bundle
+          bundle install --jobs 4 --retry 3
+          
+      - name: Run RuboCop
+        run: bundle exec rubocop
+      
+      - name: Run Brakeman
+        run: |
+          # Only run if app directory exists (for Rails projects)
+          if [ -d "app" ]; then
+            bundle exec brakeman -z --no-exit-on-warn --no-exit-on-error
+          else
+            echo "No app directory found, skipping Brakeman"
+          fi
