Update ci_local.yml to only run on manual trigger
- Set to workflow_dispatch only so it won't run automatically on GitHub

- Keep the file for local testing with act

--- a/.github/workflows/ci_local.yml
+++ b/.github/workflows/ci_local.yml
@@ -1,11 +1,9 @@
 name: CI Local
 
+# This workflow is only for local testing with act
+# It will not run automatically on GitHub
 on:
-  push:
-    branches:
-      - master
-      - main
-  pull_request:
+  workflow_dispatch: # Manual trigger only, won't run automatically
 
 jobs:
   test:
