--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential pkg-config libsqlite3-dev
           
-      - name: Adjust ActiveSupport version for test
+      - name: Adjust Rails version for test
         run: |
-          # Update the activesupport dependency in the gemspec to match the current test
-          sed -i "s/spec.add_dependency \"activesupport\", .*$/spec.add_dependency \"activesupport\", \"~> ${{ matrix.rails-version }}.0\"/g" clavis.gemspec
+          # Update the Rails dependency in the gemspec to match the current test
+          sed -i "s/spec.add_dependency \"rails\", .*$/spec.add_dependency \"rails\", \"~> ${{ matrix.rails-version }}.0\"/g" clavis.gemspec
           
       - name: Setup bundle cache
         uses: actions/cache@v3
