--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,16 +39,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential pkg-config libsqlite3-dev
           
-      - name: Adjust Rails version for test
-        run: |
-          # Update the Rails dependency in the gemspec to match the current test
-          sed -i "s/spec.add_dependency \"rails\", .*$/spec.add_dependency \"rails\", \"~> ${{ matrix.rails-version }}.0\"/g" clavis.gemspec
-          
       - name: Setup bundle cache
         uses: actions/cache@v3
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-ruby-${{ matrix.ruby-version }}-rails-${{ matrix.rails-version }}-gems-${{ hashFiles('**/clavis.gemspec') }}-${{ hashFiles('**/Gemfile.lock') }}-v2
+          key: ${{ runner.os }}-ruby-${{ matrix.ruby-version }}-rails-${{ matrix.rails-version }}-gems-${{ hashFiles('**/clavis.gemspec') }}-${{ hashFiles('**/Gemfile.lock') }}-v3
           restore-keys: |
             ${{ runner.os }}-ruby-${{ matrix.ruby-version }}-rails-${{ matrix.rails-version }}-gems-
             
@@ -56,6 +51,9 @@ jobs:
         run: |
           bundle config set --local path vendor/bundle
           bundle config set --local with 'test'
+          
+          # Add the specific Rails version to test with
+          bundle add rails --version "~> ${{ matrix.rails-version }}.0"
           bundle install --jobs 4 --retry 3
           
       - name: Run tests
