Remove debug logging and bump version to 0.3.2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           bundle install --jobs 4 --retry 3
           
       - name: Run tests
-        run: bundle exec rspec
+        run: bundle exec rake all_tests
         
       - name: Run RuboCop
         run: bundle exec rubocop
