--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -57,4 +57,4 @@ jobs:
           bundle install --jobs 4 --retry 3
           
       - name: Run tests
-        run: bundle exec rspec 
+        run: bundle exec rake all_tests 
