--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -22,6 +22,8 @@ jobs:
         include:
           - ruby-version: '3.3.0'
             rails-version: '8.0'
+          - ruby-version: '3.4.1'
+            rails-version: '8.0'
           
     name: Ruby ${{ matrix.ruby-version }} | Rails ${{ matrix.rails-version }}
     
