--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -13,13 +13,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby-version:
-          - '3.3.0'
-          - '3.4.1'
-        rails-version:
-          - '7.0'
-          - '7.1'
         include:
+          - ruby-version: '3.0.6'
+            rails-version: '7.0'
+          - ruby-version: '3.2.3'
+            rails-version: '7.1'
+          - ruby-version: '3.3.0'
+            rails-version: '7.2'
           - ruby-version: '3.3.0'
             rails-version: '8.0'
           - ruby-version: '3.4.1'
